@startuml proposed_class_diagram

' --- データ構造 ---
struct CanFrame {
    + id : uint32
    + data : uint8[8]
    + len : uint8
}

' --- ハードウェア抽象化 ---
' 物理的なCANバスへのアクセスを提供するインターフェース
interface ICanTransceiver {
    + {abstract} send(frame: CanFrame) : bool
    + {abstract} receive(out_frame: CanFrame) : bool
}

' --- バス管理 (Dispatcher) ---
' 1つのTransceiverを共有し、受信したメッセージを適切なデバイスに振り分ける
class CanManager {
    - transceiver : ICanTransceiver
    - devices : List<CanDevice>
    + register_device(device: CanDevice)
    + update() ' 定期的に呼び出す。受信処理と振り分けを行う
    + send_frame(frame: CanFrame)
}

' --- デバイス抽象基底クラス ---
' 全てのCANデバイスの共通機能を定義
abstract class CanDevice {
    # manager : CanManager
    # rx_id : uint32 ' 受信ID
    # tx_id : uint32 ' 送信ID
    
    + CanDevice(manager: CanManager, rx_id: uint32, tx_id: uint32)
    + {abstract} on_receive(frame: CanFrame) ' 受信時のコールバック
    # send(data: uint8[], len: uint8)
}

' --- 具体的なデバイス実装 ---

' モータードライバ
class MotorDriver {
    - protocol : MdProtocol
    + set_velocity(v: float)
    + on_receive(frame: CanFrame)
}

' サーボドライバ
class ServoDriver {
    + set_angle(deg: float)
    + on_receive(frame: CanFrame)
}

' --- プロトコルヘルパー (任意) ---
class MdProtocol {
    + encode(...)
    + decode(...)
}

' --- 関係性 ---
CanManager o-- ICanTransceiver
CanManager "1" o-- "*" CanDevice : manages >
CanDevice <|-- MotorDriver
CanDevice <|-- ServoDriver
MotorDriver *-- MdProtocol
CanDevice ..> CanManager : uses to send >

@enduml
